logs/xortool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xortool'...
Compiling './lib/python3.5/site-packages/xortool/args.py'...
***   File "./lib/python3.5/site-packages/xortool/args.py", line 40
    print """xortool.py
A tool to do some xor analysis:
  - guess the key length (based on count of equal chars)
  - guess the key (base on knowledge of most probable char)
Usage:
  {} [-h|--help] [OPTIONS] [<filename>]
Options:
  -l,--key-length       length of the key (integer)
  -c,--char             most possible char (one char or hex code)
  -m,--max-keylen=32    maximum key length to probe (integer)
  -x,--hex              input is hex-encoded str
  -b,--brute-chars      brute force all possible characters
  -o,--brute-printable  same as -b but will only use printable
                        characters for keys
                        """.format(os.path.basename(sys.argv[0]))
                       
                               
                                                        
                                                           
      
                                       
        
                                                   
                                                                 
                                                             
                                                
                                                           
                                                              
                                           
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xortool/libcolors.py'...
***   File "./lib/python3.5/site-packages/xortool/libcolors.py", line 23
    print header + "       " + "Colors and backgrounds:      " + color()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xortool/routine.py'...
***   File "./lib/python3.5/site-packages/xortool/routine.py", line 82
    print exitMessage
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xortool-0.95.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
